- Agregue las hojas de datos - Junte todo en una carpeta para trabajar con el avrstudio - Cree un archivo para trabajar solo con el 8253

--- a/codigo/Makefile
+++ b/codigo/Makefile
@@ -10,4 +10,5 @@
 DIR	= spi ir util
 
 all clean clobber:
-	@for i in $(DIR); do $(MAKE) $(MFLAGS) -C $$i $@; done
+	@for i in $(DIR); do \
+	( cd $$i ; $(MAKE) $(MFLAGS) -C $$i $@;) done
